# megatron_mobile_manipulator

./: .gitignore
Low_level_controller/PID_and_current_logging/: PID.cpp  config.h  imu.cpp  robot.cpp
Low_level_controller/Teensy4.1/robot_LowLevelController/: PID.cpp  PID.h  config.h  imu.cpp  imu.h  robot.cpp  robot.h  robot_LowLevelController.ino
Low_level_controller/imu_calibration/imu_calibration_data/: accel_ur_1.csv  calibrate3.py  imu_ur_2_cal.txt  imu_ur_3_out.csv
Low_level_controller/motorcontroller_test/: motorcontroller_test.ino
Low_level_controller/robot_LowLevelController/: PID.cpp  PID.h  imu.cpp  imu.h  robot_LowLevelController.ino
megatron/: CMakeLists.txt  package.xml
megatron_bringup/: CMakeLists.txt  package.xml
megatron_bringup/config/: ekf.yaml  ekf_old.yaml  imu_madgwick_filter.yaml
megatron_bringup/launch/: basic_robot.launch.py  bringup.launch.py
megatron_firmware/encoder_test/: encoder_test.ino
megatron_firmware/imu_calibration/imu_calibration/: imu_calibration.ino
megatron_firmware/imu_calibration/imu_calibration_data/: accel_ur_2.csv  accel_ur_3.csv  imu_ur_1_out.csv  imu_ur_2_out.csv  imu_ur_3_cal.txt
megatron_firmware/imu_test/: imu_test.ino
megatron_firmware/megatron_robot/: PID.h  config.h  imu.h  robot.cpp  robot.h
megatron_firmware/pid_current_logging/: PID.h  imu.h  pid_current_logging.ino  robot.h
megatron_mpc/: CMakeLists.txt  package.xml
megatron_mpc/acados_mpc/: .gitignore  generate_c_code.py  megatron_model.py
megatron_mpc/data/: reference_traj_kinematics.csv
megatron_mpc/src/: mpc_controller_node.cpp  mpc_lifecycle_client.cpp  robot_model_sim.cpp
megatron_tools/: CMakeLists.txt  package.xml
megatron_tools/config/: step_cmd_params.yaml
megatron_tools/launch/: step_cmd_publisher_launch.py
megatron_tools/src/: imu_gyro_bias_calibration.cpp  step_cmd_publisher.cpp
